--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       </section>
       <section class="contacto" id="contacto">
         <h1>Contacto</h1>
+        <h2>Formulario</h2>
       </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
