--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       </section>
       <section class="sobre-mi" id="sobre-mi">
         <h1>Sobre Mí</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit, est accusantium! Et vel officia doloribus, provident aperiam, dicta in saepe nemo esse eos quod tenetur. Unde obcaecati accusantium ad sunt.</p>
       </section>
       <section class="habilidades" id="habilidades">
         <h1>Habilidades</h1>
