add color estructura

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       </nav>
       <section class="inicio" id="inicio">
         <h1>Inicio</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti necessitatibus, ullam quod molestiae temporibus aspernatur pariatur libero veritatis adipisci soluta, vero cupiditate explicabo nesciunt sapiente ipsam reiciendis tenetur placeat officiis.</p>
       </section>
       <section class="sobre-mi" id="sobre-mi">
         <h1>Sobre Mí</h1>
