add section inicio

--- a/index.html
+++ b/index.html
@@ -30,8 +30,18 @@
         </div>
       </nav>
       <section class="inicio" id="inicio">
-        <h1>Inicio</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti necessitatibus, ullam quod molestiae temporibus aspernatur pariatur libero veritatis adipisci soluta, vero cupiditate explicabo nesciunt sapiente ipsam reiciendis tenetur placeat officiis.</p>
+        <div class="container-inicio">
+          <h3>Bienvenido, mi nombre es</h3>
+          <h1>Jeremy Morales</h1>
+          <h3>Soy <span>Ingeniero Civil en Computación e Informática</span> </h3>
+          <p>He trabajado principalmente elaborando bases de datos, análisis de requerimientos,
+            lógica de aplicaciones sencillas y creación de dashboard en Power BI</p>
+          <div class="redes">
+            <a href="www.linkedin.com/in/jeremymoralesm" class="icon"><img src="assets/img/linkedin.png" alt="linkedin"></a>
+            <a href="https://github.com/Jeremy96" class="icon"><img src="assets/img/github.png" alt="github"></a>
+          </div>
+          <a href="#sobre-mi" class="btn-box">Más Sobre Mí</a>
+        </div>
       </section>
       <section class="sobre-mi" id="sobre-mi">
         <h1>Sobre Mí</h1>
