fix btn linkedin

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <p>He trabajado principalmente elaborando bases de datos, análisis de requerimientos,
             lógica de aplicaciones sencillas y creación de dashboard en Power BI</p>
           <div class="redes">
-            <a href="www.linkedin.com/in/jeremymoralesm" class="icon"><img src="assets/img/linkedin.png" alt="linkedin"></a>
+            <a href="https://www.linkedin.com/in/jeremymoralesm" class="icon"><img src="assets/img/linkedin.png" alt="linkedin"></a>
             <a href="https://github.com/Jeremy96" class="icon"><img src="assets/img/github.png" alt="github"></a>
           </div>
           <a href="#sobre-mi" class="btn-box">Más Sobre Mí</a>
