add section sobre mi

--- a/index.html
+++ b/index.html
@@ -44,8 +44,20 @@
         </div>
       </section>
       <section class="sobre-mi" id="sobre-mi">
-        <h1>Sobre Mí</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit, est accusantium! Et vel officia doloribus, provident aperiam, dicta in saepe nemo esse eos quod tenetur. Unde obcaecati accusantium ad sunt.</p>
+        <div class="sobre-mi-img">
+          <img src="assets/img/practica.jpg" alt="sobre-mi">
+        </div>
+        <div class="container-sobre-mi">
+          <h2>Sobre Mí</h2>
+          <h4>Ingeniero Civil en Computación e Informática</h4>
+          <p>Titulado en Ingeniería Civil en Computación e informática y licenciado de ciencias de la ingeniería de la
+            Universidad Católica del Norte. Me encuentro en constante aprendizaje y búsqueda de crecimiento 
+            profesional. Busco activamente oportunidades para aplicar y expandir mis conocimientos y contribuir de 
+            manera significativa en los entornos laborales que se me presenten. Poseo habilidades en bases de datos y 
+            su visualización, así como lenguajes de programación. Durante mi experiencia laboral he trabajado con 
+            tecnologías como: SQL, Laravel, Python, Windows entre otras.
+            Actualmente me encuentro realizando un Bootcamp Fullstack de Javascript impartido por E-Camp.</p>
+        </div>
       </section>
       <section class="habilidades" id="habilidades">
         <h1>Habilidades</h1>
