add section formulario

--- a/index.html
+++ b/index.html
@@ -66,8 +66,28 @@
         <h1>Proyectos</h1>
       </section>
       <section class="contacto" id="contacto">
-        <h1>Contacto</h1>
-        <h2>Formulario</h2>
+        <div class="contacto-texto">
+          <h2>Contacto</h2>
+          <h4>Trabajemos Juntos</h4>
+          <p>La comunicación es la clave para crear relaciones sólidas y duraderas. Quiero escucharte, saber qué piensas, y cómo puedo ayudarte. Si tienes alguna pregunta, duda, o simplemente quieres compartir una idea, ¡no dudes en ponerte en contacto conmigo!
+
+            Ya sea que necesites más información sobre mis servicios, tengas alguna sugerencia para mejorar, o solo quieras saludarme, estoy aquí para ti. Espero brindarte la mejor experiencia posible, y estoy ansioso por conocerte mejor.
+            
+            Completa el formulario a continuación y  te responderá personalmente en el menor tiempo posible. Cada mensaje  es importante para mí, así que no te preocupes, estoy aquí para ayudarte en todo lo que necesites.
+          </p>
+        </div>
+        <div class="contacto-form">
+          <form action="">
+            <input type="text" placeholder="Escribe tu nombre" required>
+            <input type="email" placeholder="Escribe tu correo" required>
+            <input type="text" placeholder="Escribe tu asunto" required>
+            <textarea name="" id="" cols="40" rows="10" placeholder="Escribe tu mensaje" required></textarea>
+            <input type="submit" value="Enviar" class="send">
+          </form>
+      </div>
+      </section>
+      <section class="footer">
+          <p>Desarrollado por Jeremy Morales @2024 Derechos Reservados</p>
       </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
