--- a/index.html
+++ b/index.html
@@ -59,12 +59,115 @@
             Actualmente me encuentro realizando un Bootcamp Fullstack de Javascript impartido por E-Camp.</p>
         </div>
       </section>
+      
       <section class="habilidades" id="habilidades">
-        <h1>Habilidades</h1>
+        <div class="container-habilidades">
+          <h2>Habilidades</h2>
+          <div class="fila">
+              <!-- Habilidades Técnicas -->
+              <div class="col">
+                  <h3>Habilidades Técnicas</h3>
+                  <div class="skill">
+                      <span>Javascript</span>
+                      <div class="barra-skill">
+                          <div class="progreso">
+                              <span>40%</span>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="skill">
+                      <span>HTML & CSS</span>
+                      <div class="barra-skill">
+                          <div class="progreso">
+                              <span>70%</span>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="skill">
+                      <span>Python</span>
+                      <div class="barra-skill">
+                          <div class="progreso">
+                              <span>50%</span>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="skill">
+                      <span>SQL</span>
+                      <div class="barra-skill">
+                          <div class="progreso">
+                              <span>70%</span>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="skill">
+                      <span>Power BI</span>
+                      <div class="barra-skill">
+                          <div class="progreso">
+                              <span>70%</span>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="skill">
+                    <span>Laravel</span>
+                    <div class="barra-skill">
+                        <div class="progreso">
+                            <span>40%</span>
+                        </div>
+                     </div>
+                  </div>
+              </div>
+              <!-- Habilidades Profesionales -->
+              <div class="col">
+                  <h3>Habilidades Profesionales</h3>
+                  <div class="skill">
+                      <span>Comunicación</span>
+                      <div class="barra-skill">
+                          <div class="progreso">
+                              <span>60%</span>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="skill">
+                      <span>Trabajo en Equipo</span>
+                      <div class="barra-skill">
+                          <div class="progreso">
+                              <span>70%</span>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="skill">
+                      <span>Creatividad</span>
+                      <div class="barra-skill">
+                          <div class="progreso">
+                              <span>60%</span>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="skill">
+                      <span>Dedicación</span>
+                      <div class="barra-skill">
+                          <div class="progreso">
+                              <span>80%</span>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="skill">
+                      <span>Proyect Management</span>
+                      <div class="barra-skill">
+                          <div class="progreso">
+                              <span>80%</span>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
       </section>
+
       <section class="proyectos" id="proyectos">
         <h1>Proyectos</h1>
       </section>
+
       <section class="contacto" id="contacto">
         <div class="contacto-texto">
           <h2>Contacto</h2>
@@ -90,5 +193,6 @@
           <p>Desarrollado por Jeremy Morales @2024 Derechos Reservados</p>
       </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+    <script src="assets/js/index.js"></script>
+  </body>
 </html>
