add seccion proyectos

--- a/index.html
+++ b/index.html
@@ -166,6 +166,69 @@
 
       <section class="proyectos" id="proyectos">
         <h1>Proyectos</h1>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100">
+                <img src="assets/img/sistema-inventario.jpg" class="card-img-top" alt="app1">
+                <div class="card-body">
+                  <h5 class="card-title">Sistema de control de inventario</h5>
+                  <p class="card-text">Proyecto de título donde me desempeñe como analista de requerimientos, desarrollador de base de 
+                    datos y desarrollador BackEnd en lenguaje ÁSP.net para el desarrollo de un módulo de control de 
+                    inventario, que permite el registro de las entradas y salidas de productos que se producen en la 
+                    bodega de la Compañía Minera Cerro Negro</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="assets/img/formulario.jpg" class="card-img-top" alt="app2">
+                <div class="card-body">
+                  <h5 class="card-title">Formulario para enviar solicitudes de exepción</h5>
+                  <p class="card-text">Formulario hecho con HTML, CSS y Javascript para recibir las solicitudes de exepción de aseo de la municipalidad de La Serena.
+                    </p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="assets/img/app-formularios.jpg" class="card-img-top" alt="app3">
+                <div class="card-body">
+                  <h5 class="card-title">App para administración de formularios</h5>
+                  <p class="card-text">Aplicación hecha con el framework Laravel para administrar las solicitudes de exepción de aseo de la municipalidad de La Serena.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="assets/img/app-celulares.jpg" class="card-img-top" alt="app4">
+                <div class="card-body">
+                  <h5 class="card-title">App para administración de equipos móviles y personal</h5>
+                  <p class="card-text">Aplicación hecha con el framework Laravel para administrar los equipos móviles entregados al personal de la municipalidad de La Serena.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                  <img src="assets/img/dashboard.png" class="card-img-top" alt="app5">
+                  <div class="card-body">
+                    <h5 class="card-title">Dashboard Informativo</h5>
+                    <p class="card-text">Proyecto universitario donde desarrolle en ETL con la herramienta de Microsoft Integration Services 
+                        y posterior dashboard en Power BI, con datos estadísticos de notas de distintos ramos de la 
+                        universidad, con el fin de definir porcentajes de aprobación/reprobación entre otros datos para la 
+                        toma de decisiones.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card h-100">
+                  <img src="assets/img/app-celulares.jpg" class="card-img-top" alt="app5">
+                  <div class="card-body">
+                    <h5 class="card-title">App para administración de equipos móviles y personal</h5>
+                    <p class="card-text">Aplicación hecha con el framework Laravel para administrar los equipos móviles entregados al personal de la municipalidad de La Serena.</p>
+                  </div>
+                </div>
+              </div>
+          </div>
       </section>
 
       <section class="contacto" id="contacto">
